--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "firebase": "^9.6.5",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
