added logo, hooks, etc.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Traq.it",
-  "name": "Traq.it",
+  "short_name": "TraQ.it",
+  "name": "TraQ.it",
   "icons": [
     {
       "src": "favicon.ico",
