--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "firebase": "^9.6.5",
+    "idb": "^7.0.0",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
